gc 、 线程交换输出